--- a/meme.html
+++ b/meme.html
@@ -55,6 +55,43 @@
         </nav>
     </div>
     <div class="container">
+      <h1 class="text-osu pt-5">Velmi vtipné a zajímavé perly z internetu</h1>>
+      <div class="row">
+        <div class="container">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mDBNVcmMXWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kqpasBos2DE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EPPEGArtT7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/AaAF51Gwbxo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ER7fYDQzkLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Mkd3uAbPPjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container">
+          <div class="embed-responsive embed-responsive-16by9 d-flex justify-content-center">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">day 15 <a href="https://twitter.com/btmclive?ref_src=twsrc%5Etfw">@btmclive</a> falls <a href="https://t.co/p5J6lPHOnX">pic.twitter.com/p5J6lPHOnX</a></p>&mdash; Everything Is Sputnik (@all_sputnik) <a href="https://twitter.com/all_sputnik/status/1492507316700200963?ref_src=twsrc%5Etfw">February 12, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9 d-flex justify-content-center">
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">FINALLY UNINSTALLED OSU! SWITCHING TO STREAMING VARIETY AND GENSHIN IMPACT FULL TIME. CATCH ME LIVE AT <a href="https://t.co/W8WtyEuPXD">https://t.co/W8WtyEuPXD</a> !!! <a href="https://t.co/jAcntrunAI">pic.twitter.com/jAcntrunAI</a></p>&mdash; BTMC (@btmclive) <a href="https://twitter.com/btmclive/status/1500836378271125507?ref_src=twsrc%5Etfw">March 7, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-muted">© 2022 osu! game</p>
     
