--- a/obchod.html
+++ b/obchod.html
@@ -160,6 +160,18 @@
                   </div>
             </div>
         </div>
+      <div class="container pt-5">
+        <h1 class="text-osu fs-3 pt-5">
+          Chceš dostávat upozornění na nové zboží v obchodu?
+        </h1>
+        <form>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label text-osu">Emailová adresa</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+          <button type="submit" class="btn btn-osu">Uložit</button>
+        </form>
+      </div>
     <div class="container pt-5">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-muted">© 2022 osu! game</p>
